make sure the image doesn't show up on mobile

--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ sub {
     float: left;
     width: 175px;
     height: 160px;
-    margin-left: -200px;
+    margin-left: -215px;
     margin-top: -3px;
     background: url("/i/logo.png");
     background-size: 200px;
